[package]
name = "ode-rs"
version = "1.2.1" # change with html_root_url in lib.rs
edition = "2021"
authors = ["nomissbowling <nomissbowling@yahoo.co.jp>"]

description = "ODE Open Dynamics Engine for Rust"
keywords = ["opengl", "dynamics", "kinetics", "physics", "3D"]
categories = ["simulation", "rendering", "science", "external-ffi-bindings"]
license = "MIT"

documentation = "https://docs.rs/ode-rs/"
homepage = "https://crates.io/crates/ode-rs"
repository = "https://github.com/nomissbowling/ode-rs"

readme = "README.md"

#build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ode_rs"

[dependencies]
once_cell = "1.17.1"

asciiz = { version = "0.1" }

# anyslot = { version = "0.1" }

drawstuff = { version = "0.1" }
ode-base = { version = "0.2" }
oyk = { version = "1.2" }

impl_sim = { version = "0.3" }

home = { version = "=0.5.5" } # cc(1.0.79)/bindgen(0.65.1) requires home(0.5.5)

[build-dependencies]
cc = "=1.0.79"
bindgen = "=0.65.1"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
